--- a/web/package.json
+++ b/web/package.json
@@ -17,12 +17,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@unhead/vue": "^1.11.6",
     "@vant/touch-emulator": "^1.4.0",
     "@vant/use": "^1.6.0",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
+    "element-plus": "^2.8.3",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.2",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "3.6.2",
     "@iconify-json/carbon": "^1.2.1",
+    "@iconify-json/ep": "^1.2.0",
     "@intlify/unplugin-vue-i18n": "^5.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.5",
@@ -61,6 +64,7 @@
     "typescript": "^5.6.2",
     "unocss": "0.62.4",
     "unplugin-auto-import": "^0.18.3",
+    "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.6",
