--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-vant-mobile",
+  "name": "timeTable",
   "type": "module",
   "version": "3.0.0",
   "packageManager": "pnpm@9.10.0",
